--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
       "dev": "next dev",
       "build": "next build",
       "start": "next start",
-      "lint": "next lint"
+      "lint": "next lint",
+      "seed:admin": "scripts/seed-admin.ts"
    },
    "dependencies": {
       "@hookform/resolvers": "^3.9.1",
@@ -47,6 +48,7 @@
       "clsx": "^2.1.1",
       "cmdk": "1.0.4",
       "date-fns": "^3.6.0",
+      "dotenv": "^16.5.0",
       "embla-carousel-react": "8.5.1",
       "input-otp": "1.4.1",
       "lucide-react": "^0.454.0",
@@ -73,6 +75,7 @@
       "@types/react-dom": "^19",
       "postcss": "^8",
       "tailwindcss": "^3.4.17",
+      "tsx": "^4.20.3",
       "typescript": "^5"
    }
 }
